# qa_guru_Python_4_18

./: pyproject.toml
schemas/: reqres.py
tests/: test_api.py
